--- a/styles/main.css
+++ b/styles/main.css
@@ -1,34 +1,27 @@
-
-.container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+@font-face {
+    font-family: 'Vazirmatn';
+    src: url('../fonts/Vazirmatn-FD-Regular.ttf')
 }
-img{
-    width: 450px;
-    height: 350px;
-    margin: 10px;
-    transition: all 1s;
-    border: 1px solid rgba(0, 0, 0, 0);
-    border-radius: 10px;
+*{
+    font-family: Vazirmatn;
+}
+html{
+    direction: rtl;
 }
 
-img:hover{
-    transform: scale(1.1);
+body{
+    width: 100vw;
+    height: 100vh;
 }
-.header-container{
-    display:flex;
-    justify-content: center;
-}
-h2{
-    width: fit-content;
-    border-bottom: 3px solid royalblue;
+div {
+    background-color: cadetblue;
+    border: 3px solid black;
 }
 
-.btn-default {
-    background-color: aqua;
+.header {
+    height: 100px;
 }
 
-.table-primary{
-    background-color: red;
+.sub-header {
+    height: 100px;
 }
